--- a/public/front/assets/css/style.css
+++ b/public/front/assets/css/style.css
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-  color: #1bbd36;
+  color: #3366FF;
 }
 
 a:hover {
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 3px;
   right: 15px;
   bottom: 15px;
-  background: #1bbd36;
+  background: #3366FF;
   color: #fff;
   transition: display 0.5s ease-in-out;
   z-index: 99999;
@@ -91,7 +91,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo a span {
-  color: #1bbd36;
+  color: #3366FF;
 }
 
 #header .logo img {
@@ -130,7 +130,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
-  color: #1bbd36;
+  color: #3366FF;
 }
 
 .nav-menu .drop-down ul {
@@ -145,7 +145,7 @@ h1, h2, h3, h4, h5, h6 {
   background: #fff;
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
   transition: 0.3s;
-  border-top: 2px solid #1bbd36;
+  border-top: 2px solid #3366FF;
 }
 
 .nav-menu .drop-down:hover > ul {
@@ -168,7 +168,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu .drop-down ul a:hover, .nav-menu .drop-down ul .active > a, .nav-menu .drop-down ul li:hover > a {
-  color: #1bbd36;
+  color: #3366FF;
 }
 
 .nav-menu .drop-down > a:after {
@@ -228,7 +228,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav-toggle i {
-  color: #1bbd36;
+  color: #3366FF;
 }
 
 .mobile-nav {
@@ -263,7 +263,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .mobile-nav a:hover, .mobile-nav .active > a, .mobile-nav li:hover > a {
-  color: #1bbd36;
+  color: #3366FF;
   text-decoration: none;
 }
 
@@ -336,7 +336,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .header-social-links a:hover {
-  color: #1bbd36;
+  color: #3366FF;
 }
 
 @media (max-width: 768px) {
@@ -385,7 +385,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   -webkit-animation-duration: .5s;
   animation-duration: .5s;
-  border-top: 5px solid #1bbd36;
+  border-top: 5px solid #3366FF;
 }
 
 #hero .carousel-content h2 {
@@ -409,11 +409,11 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
-  border: 2px solid #1bbd36;
+  border: 2px solid #3366FF;
 }
 
 #hero .btn-get-started:hover {
-  background: #1bbd36;
+  background: #3366FF;
   color: #fff;
   text-decoration: none;
 }
@@ -481,7 +481,7 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero .carousel-indicators li.active {
   opacity: 1;
-  background: #1bbd36;
+  background: #3366FF;
 }
 
 @media (min-width: 1024px) {
@@ -544,7 +544,7 @@ section {
   display: block;
   width: 50px;
   height: 3px;
-  background: #1bbd36;
+  background: #3366FF;
   bottom: 0;
   left: calc(50% - 25px);
 }
@@ -558,7 +558,7 @@ section {
 --------------------------------------------------------------*/
 .breadcrumbs {
   padding: 15px 0;
-  background: #1bbd36;
+  background: #3366FF;
   min-height: 40px;
   margin-top: 72px;
 }
@@ -765,7 +765,7 @@ section {
 
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
   color: #fff;
-  background: #1bbd36;
+  background: #3366FF;
 }
 
 .portfolio #portfolio-flters li:last-child {
@@ -810,7 +810,7 @@ section {
 }
 
 .portfolio .portfolio-item .portfolio-info .preview-link:hover, .portfolio .portfolio-item .portfolio-info .details-link:hover {
-  color: #1bbd36;
+  color: #3366FF;
 }
 
 .portfolio .portfolio-item .portfolio-info .details-link {
@@ -909,7 +909,7 @@ section {
   top: 7px;
   position: absolute;
   font-size: 20px;
-  color: #1bbd36;
+  color: #3366FF;
 }
 
 .about-us .content p:last-child {
@@ -954,7 +954,7 @@ section {
 }
 
 .team .member .social a:hover {
-  color: #1bbd36;
+  color: #3366FF;
 }
 
 .team .member .social i {
@@ -1023,7 +1023,7 @@ section {
   width: 1px;
   height: 10px;
   transition: .9s;
-  background-color: #1bbd36;
+  background-color: #3366FF;
 }
 
 /*--------------------------------------------------------------
@@ -1058,7 +1058,7 @@ section {
 }
 
 .features .icon-box h3 a:hover {
-  color: #1bbd36;
+  color: #3366FF;
 }
 
 /*--------------------------------------------------------------
@@ -1086,7 +1086,7 @@ section {
 
 .pricing h4 {
   font-size: 36px;
-  color: #1bbd36;
+  color: #3366FF;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   margin-bottom: 20px;
@@ -1118,7 +1118,7 @@ section {
 }
 
 .pricing ul i {
-  color: #1bbd36;
+  color: #3366FF;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -1136,7 +1136,7 @@ section {
 }
 
 .pricing .btn-buy {
-  background: #1bbd36;
+  background: #3366FF;
   display: inline-block;
   padding: 8px 35px 10px 35px;
   border-radius: 4px;
@@ -1155,7 +1155,7 @@ section {
 
 .pricing .featured h3 {
   color: #fff;
-  background: #1bbd36;
+  background: #3366FF;
 }
 
 .pricing .advanced {
@@ -1167,7 +1167,7 @@ section {
   z-index: 1;
   font-size: 14px;
   padding: 1px 0 3px 0;
-  background: #1bbd36;
+  background: #3366FF;
   color: #fff;
 }
 
@@ -1235,7 +1235,7 @@ section {
 }
 
 .faq .faq-list a.collapsed:hover {
-  color: #1bbd36;
+  color: #3366FF;
 }
 
 .faq .faq-list a.collapsed .icon-show {
@@ -1322,11 +1322,11 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #1bbd36;
+  color: #3366FF;
   float: left;
   width: 44px;
   height: 44px;
-  border: 1px solid #1bbd36;
+  border: 1px solid #3366FF;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1350,7 +1350,7 @@ section {
 }
 
 .contact .info:hover i {
-  background: #1bbd36;
+  background: #3366FF;
   color: #fff;
 }
 
@@ -1423,7 +1423,7 @@ section {
 }
 
 .contact .php-email-form input:focus, .contact .php-email-form textarea:focus {
-  border-color: #1bbd36;
+  border-color: #3366FF;
 }
 
 .contact .php-email-form input {
@@ -1435,7 +1435,7 @@ section {
 }
 
 .contact .php-email-form button[type="submit"] {
-  background: #1bbd36;
+  background: #3366FF;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1496,7 +1496,7 @@ section {
 }
 
 .portfolio-details .portfolio-details-carousel .owl-dot.active {
-  background-color: #1bbd36 !important;
+  background-color: #3366FF !important;
 }
 
 .portfolio-details .portfolio-info {
@@ -1581,7 +1581,7 @@ section {
 }
 
 .blog .entry .entry-title a:hover {
-  color: #1bbd36;
+  color: #3366FF;
 }
 
 .blog .entry .entry-meta {
@@ -1615,7 +1615,7 @@ section {
 }
 
 .blog .entry .entry-meta a:hover {
-  color: #1bbd36;
+  color: #3366FF;
 }
 
 .blog .entry .entry-content p {
@@ -1629,7 +1629,7 @@ section {
 
 .blog .entry .entry-content .read-more a {
   display: inline-block;
-  background: #1bbd36;
+  background: #3366FF;
   color: #fff;
   padding: 7px 25px;
   transition: 0.3s;
@@ -1638,7 +1638,7 @@ section {
 }
 
 .blog .entry .entry-content .read-more a:hover {
-  background: #1ed33c;
+  background: #3366FF;
 }
 
 .blog .entry .entry-content h3 {
@@ -1709,7 +1709,7 @@ section {
 }
 
 .blog .entry .entry-footer a:hover {
-  color: #1bbd36;
+  color: #3366FF;
 }
 
 .blog .entry .entry-footer .cats {
@@ -1814,7 +1814,7 @@ section {
 }
 
 .blog .blog-comments .comment h5 a:hover {
-  color: #1bbd36;
+  color: #3366FF;
 }
 
 .blog .blog-comments .comment h5 .reply {
@@ -1885,11 +1885,11 @@ section {
   padding: 8px 20px;
   border: 0;
   border-radius: 4px;
-  background-color: #1bbd36;
+  background-color: #3366FF;
 }
 
 .blog .blog-comments .reply-form .btn-primary:hover {
-  background-color: #1ed33c;
+  background-color: #3366FF;
 }
 
 .blog .blog-pagination {
@@ -1919,8 +1919,8 @@ section {
 }
 
 .blog .blog-pagination li.active, .blog .blog-pagination li:hover {
-  background: #1bbd36;
-  border: 1px solid #1bbd36;
+  background: #3366FF;
+  border: 1px solid #3366FF;
   border-radius: 4px;
 }
 
@@ -1982,14 +1982,14 @@ section {
   font-size: 16px;
   padding: 0 15px;
   margin: -1px;
-  background: #1bbd36;
+  background: #3366FF;
   color: #fff;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
 }
 
 .blog .sidebar .search-form form button:hover {
-  background: #1ed33c;
+  background: #3366FF;
 }
 
 .blog .sidebar .categories ul {
@@ -2007,7 +2007,7 @@ section {
 }
 
 .blog .sidebar .categories ul a:hover {
-  color: #1bbd36;
+  color: #3366FF;
 }
 
 .blog .sidebar .categories ul a span {
@@ -2037,7 +2037,7 @@ section {
 }
 
 .blog .sidebar .recent-posts h4 a:hover {
-  color: #1bbd36;
+  color: #3366FF;
 }
 
 .blog .sidebar .recent-posts time {
@@ -2074,8 +2074,8 @@ section {
 
 .blog .sidebar .tags ul a:hover {
   color: #fff;
-  border: 1px solid #1bbd36;
-  background: #1bbd36;
+  border: 1px solid #3366FF;
+  background: #3366FF;
 }
 
 .blog .sidebar .tags ul a span {
@@ -2141,7 +2141,7 @@ section {
 
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #1ed33c;
+  color: #3366FF;
   font-size: 18px;
   line-height: 1;
 }
@@ -2205,7 +2205,7 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #1bbd36;
+  background: #3366FF;
   color: #fff;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
@@ -2238,7 +2238,7 @@ section {
 }
 
 #footer .social-links a:hover {
-  background: #1bbd36;
+  background: #3366FF;
   color: #fff;
   text-decoration: none;
 }
